--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -72,12 +72,34 @@
         android:id="@+id/loveOracleFragment"
         android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.loveOracle.LoveOracleFragment"
         android:label="The Love Oracle"
-        tools:layout="@layout/fragment_love_oracle" >
+        tools:layout="@layout/fragment_love_oracle">
         <action
-            android:id="@+id/action_loveOracleFragment_to_littleCrossMeaningFragment"
-            app:destination="@id/littleCrossMeaningFragment" />
+            android:id="@+id/action_loveOracleFragment_to_loveOracleMeaningFragment"
+            app:destination="@id/loveOracleMeaningFragment" />
     </fragment>
 
+
+    <fragment
+        android:id="@+id/loveOracleMeaningFragment"
+        android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.loveOracle.LoveOracleMeaningFragment"
+        android:label="fragment_love_oracle_meaning"
+        tools:layout="@layout/fragment_love_oracle_meaning">
+        <argument
+            android:name="card01ID"
+            app:argType="integer" />
+        <argument
+            android:name="card02ID"
+            app:argType="integer" />
+        <argument
+            android:name="card03ID"
+            app:argType="integer" />
+        <argument
+            android:name="card04ID"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_loveOracleMeaningFragment_to_oneCardFragment"
+            app:destination="@id/oneCardFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/simplPathFragment"
@@ -222,6 +244,8 @@
             android:id="@+id/action_favQuoteOptionsFragment_to_veryHomeFragment"
             app:destination="@id/veryHomeFragment" />
     </fragment>
+
+
 
 
 
